# Sentiment-Analysis

./: .gitignore  Dockerfile  artifacts.dvc  pyproject.toml
.dvc/: config
backend/: main.py  requirements.txt
backend/Pipeline/: pipeline_module.py
frontend/: main.py
notebooks/: text-classification-using-bert.ipynb
src/backend/: main.py
src/config/: logger.py  logging_config.py
src/frontend/: main.py
src/pipeline/: pipeline_module.py
