[project]
name = "sentiment-analysis-using-bert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc[azure]>=3.62.0",
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "streamlit>=1.49.1",
    "torch>=2.8.0",
    "transformers==4.52.4",
    "uvicorn>=0.35.0",
]
